# sec-labo2

./: .gitignore  README.md  sec-labo2-report-berney-alec.docx
app_tools/: Cargo.toml
app_tools/src/: lib.rs
app_tools/src/communication/: data.rs  messages.rs
app_tools/src/input_validation/: email.rs  password.rs  pin.rs  uuid.rs
app_tools/src/security/: crypto.rs
client/: Cargo.toml
client/src/: action.rs  authentication.rs  authentication_tools.rs  communication_tools.rs  email_manager.rs  handlers.rs  main.rs  yubi.rs
communication_tools/: Cargo.toml
communication_tools/src/: data_structures.rs  lib.rs  messages.rs
hashing_tools/: Cargo.toml
hashing_tools/src/: hash_helpers.rs  lib.rs
input_validation/src/: email_validation.rs  lib.rs  password_validation.rs  pin_validation.rs  uuid_validation.rs
server/: .env  Cargo.toml  db.ron
server/src/: action.rs  authentication.rs  authentication_tools.rs  database.rs  email_manager.rs  mailer.rs  main.rs
