[package]
name = "app_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.5"
rust-argon2 = "1.0"
rand = "0.8.0"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }