[package]
name = "client"
version = "0.1.0"
authors = ["Alec Berney"]
edition = "2021"

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
strum = "0.20"
strum_macros = "0.20"
yubikey = "0.5"
input_validation = { path = "../input_validation" }
rust-argon2 = "1.0"
rand = "0.8.0"
uuid = {version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
lettre = "0.9.6"

