[package]
name = "client"
version = "0.1.0"
authors = ["Alec Berney"]
edition = "2021"

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
strum = "0.20"
strum_macros = "0.20"
yubikey = "0.5"
input_validation = { path = "../input_validation" }
communication_tools = { path = "../communication_tools" }
hashing_tools = { path = "../hashing_tools" }
x509 = "0.2.0"

